--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,14 @@
     <string name="action_profile">Profile</string>
     <string name="user_obj">userObj</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_user_profile">UserProfile</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="collection_userlocation">UserLocation</string>
 
 
 </resources>
