--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="fromUserId">fromUserId</string>
     <string name="toUserId">toUserId</string>
     <string name="title_activity_rides_found">Map</string>
+    <string name="data_type">data_type</string>
 
 
 </resources>
